--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="material.css">
     <link rel="stylesheet" href="styles.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
@@ -17,8 +19,8 @@
     <!--Main Container-->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
         <!-- Header Start -->
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" id="header">
-            <header class="mdl-layout__header">
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" id="header-cont">
+            <header class="mdl-layout__header" id="header">
                 <div class="mdl-layout__header-row">
                     <!-- Title -->
                     <span class="mdl-layout-title">Material Design Lite</span>
@@ -30,21 +32,7 @@
                             target="_blank">Github</a>
                     </nav>
                 </div>
-            </header>
-            <div class="mdl-layout__drawer">
-                <span class="mdl-layout-title">Title</span>
-                <nav class="mdl-navigation">
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
-                </nav>
-            </div>
-            <main class="mdl-layout__content">
-                <div class="page-content">
-                    <!-- Your content goes here -->
-                </div>
-            </main>
+            </header>   
         </div>
 
         <!--Sidebar-->
@@ -179,7 +167,7 @@
                                     <h2 class="mdl-card__title-text">Auckland Sky Tower<br>Auckland, New Zealand</h2>
                                 </div>
                                 <div class="mdl-card__media">
-                                    <img src="skytower.jpg" width="173" height="157" border="0" alt=""
+                                    <img src="skytower.jpg" width="173" height="157" alt=""
                                         style="padding:10px;">
                                 </div>
                                 <div class="mdl-card__supporting-text">
@@ -196,7 +184,7 @@
                         </div>
                         <div class="comp-example">
                             <div class="mdl-card mdl-shadow--4dp">
-                                <div class="mdl-card__media"><img src="skytower.jpg" width="173" height="157" border="0"
+                                <div class="mdl-card__media"><img src="skytower.jpg" width="173" height="157"
                                         alt="" style="padding:10px;">
                                 </div>
                                 <div class="mdl-card__supporting-text">
@@ -392,7 +380,7 @@
                     <h5>Examples</h5>
                     <div class="example">
                         <div class="comp-example">
-                            <ul class="demo-list-item mdl-list">
+                            <ul class="demo-list-item mdl-list" style="width: 650px; margin: 0 auto;">
                                 <li class="mdl-list__item">
                                     <span class="mdl-list__item-primary-content">
                                         Bryan Cranston
@@ -412,7 +400,7 @@
                             <p>Simple list</p>
                         </div>
                         <div class="comp-example">
-                            <ul class="demo-list-control mdl-list">
+                            <ul class="demo-list-control mdl-list" style="width: 650px; margin: 0 auto;">
                                 <li class="mdl-list__item">
                                     <span class="mdl-list__item-primary-content">
                                         <i class="material-icons  mdl-list__item-avatar">person</i>
@@ -456,7 +444,7 @@
                             <p>List with avatar and controls</p>
                         </div>
                         <div class="comp-example">
-                            <ul class="demo-list-three mdl-list" style="width: 650px;">
+                            <ul class="demo-list-three mdl-list" style="width: 650px; margin: 0 auto;">
                                 <li class="mdl-list__item mdl-list__item--three-line">
                                     <span class="mdl-list__item-primary-content">
                                         <i class="material-icons mdl-list__item-avatar">person</i>
@@ -612,9 +600,9 @@
                     <h5>Examples</h5>
                     <div class="example">
                         <div class="comp-example">
-                            <p style="width:300px">
+                            <p style="width:300px; margin: auto;">
                                 <input class="mdl-slider mdl-js-slider" type="range" id="s1" min="0" max="10" value="4"
-                                    step="1">
+                                    step="2">
                             </p>
                             <p>A slider that controls volume</p>
                         </div>
@@ -679,7 +667,7 @@
                     <h5>Examples</h5>
                     <div class="example">
                         <div class="comp-example">
-                            <label for="chkbox1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+                            <label for="chkbox1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" style="width:200px; margin: auto;">
                                 <input type="checkbox" id="chkbox1" class="mdl-checkbox__input">
                                 <span class="mdl-checkbox__label">Enable AutoSave</span>
                             </label>
